@@ -1,8 +1,8 @@
 {
     "perl"        : "6.*",
     "name"        : "URI",
-    "license"      : "Artistic-2.0",
-    "version"     : "0.2.0",
+    "license"     : "Artistic-2.0",
+    "version"     : "0.2.1",
     "description" : "A URI implementation using Perl 6 grammars to implement RFC 3986 BNF",
     "depends"     : [ ],
     "provides" : {
